Create SBT plugin.